# wccls

./: .gitattributes  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  README.rst  pylintrc  pyproject.toml  setup.py  test_wccls.py
.github/workflows/: ci.yml
src/wccls/: __init__.py  bibliocommons.py  item_types.py  parser.py  wccls.py
tests/: __init__.py  conftest.py  test_client.py  test_main.py  test_parser.py
tests/cassettes/: test_multcolib.yaml  test_wccls.yaml
tests/filesets/wccls/: checkedout  in_transit  login  not_yet_available  output.json  ready_for_pickup  suspended
tests/filesets/wccls-infinite-pause/: checkedout  in_transit  login  login_destination=%2Fuser_dashboard  not_yet_available  output.json  ready_for_pickup  suspended
tests/filesets/with3dobject/: checkedout  in_transit  login  not_yet_available  output.json  ready_for_pickup  suspended
tests/wccls/: login  not_yet_available  suspended
wccls/: __init__.py  bibliocommons.py  loggedin.html  login-form.html  on-hold.html  parser.py  wccls.py  wccls_desktop.py  wccls_mobile.py
wccls/checked-out_files/: Jacket.aspx  sdk.js
wccls/login-form_files/: 8067(1).js  __Bz3h5RzMx.html  bc_base-d329b53ae635df1c44a38fe0d4cd81a6.css  core-62129e13e7ee5569a82b500b93821031.css  gtm.js  library_branding.css  print-9f5a683b50c99069c22fd4ed2e1049b7.css  session-4e276af8abda902e2294bdd14bce9a6b.css  session-d0aca3286d65eeb43d5e00ca7f3d8e32.js
wccls/on-hold_files/: Jacket(1).aspx  Jacket(10).aspx  Jacket(11).aspx  Jacket(2).aspx  Jacket(3).aspx  Jacket(4).aspx  Jacket(5).aspx  Jacket(6).aspx  Jacket(7).aspx  Jacket(8).aspx  Jacket(9).aspx  Jacket.aspx  __Bz3h5RzMx.html  core-81e05991467fc3846eeac54b7175c38e.js  holds-721c7ed429b822d850900dc645695e6b.css  holds-9dfa6405baa4238f69048da1f42f9673.js
