[build-system]
requires = ["poetry_core>=1.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wccls"
version = "3.1.4"
description = "Scraper for the WCCLS account page"
authors = ["Rehan Khwaja <rehan@khwaja.name>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rkhwaja/wccls"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12"
	]
packages = [
    { include = "wccls", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
beautifulsoup4 = ">=4.9.3"
requests = ">=2.25.1"
urllib3 = [
	{ version = ">=1.26", python = ">=3.10,<4" }
]
aiohttp = { version = ">=3.9" }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1"
pytest-cov = ">=2.10.1"
pytest-asyncio = ">=0.16.0"
poethepoet = ">=0.16.4"
ruff = ">=0.6.3"

[tool.poe.tasks]
lint = "ruff check src tests"

[tool.poe.tasks.test]
shell = """
pytest --cov=src/wccls || exit 1
coverage xml
"""

[tool.ruff]
line-length = 200
lint.ignore = ["A003", "ANN", "B011", "D", "DTZ", "EM", "FBT003", "FIX002", "I", "N", "PT013", "PT015", "PTH123", "S101", "TCH", "TD", "TRY003", "W191"]
lint.select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F403"]
"tests/*" = ["INP001"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.pytest.ini_options]
pythonpath = ["src"]
